# GMediaMP

./: .gitignore  Makefile.in  configure  configure.ac
data/: Makefile.am
data/imgs/: Makefile.am
data/ui/: Makefile.am  browser.ui  main.ui  music.ui  player.ui  shows.ui
debian/: changelog  control  copyright  rules
src/: Makefile.am  Makefile.in  album.c  album.h  artist.c  artist.h  browser.c  browser.h  catagory-display.c  catagory-display.h  column-funcs.c  column-funcs.h  device-ipod.c  device-ipod.h  device-manager.c  device-manager.h  device.c  device.h  entry.c  entry.h  gmediadb-store.c  gmediadb-store.h  gmediadb.c  gmediadb.h  gmediamp.c  gmediamp.schemas  ipod-store.c  ipod-store.h  media-store.c  media-store.h  mini-pane.c  mini-pane.h  movies.c  movies.h  music.c  music.h  now-playing.c  now-playing.h  player-av.c  player-av.h  (+28 more)
